chore: prepare for production deployment